# Canivete

./: README.md  aws_security_list.txt  tools
cloud-custodian/: .azure-pipelines.yml  .codecov.yml  .coveragerc  .dockerignore  .drone.yml  .gitignore  CODEOWNERS  Dockerfile  MANIFEST.in  Makefile  OWNERS.md  README.md  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt  setup.py  test.env  tox.ini
cloud-custodian/.azure-pipelines/: cask-release.yml  live-functional.yml
cloud-custodian/.github/ISSUE_TEMPLATE/: bug-report.md  question.md
cloud-custodian/.github/workflows/: ci-master.yml  ci-release-0-8.yml  docker.yml
cloud-custodian/c7n/: cache.py  cli.py  commands.py  config.py  credentials.py  ctx.py  cwe.py  data.py  element.py  exceptions.py  executor.py  handler.py  loader.py  log.py  lookup.py  manager.py  mu.py  output.py  policy.py  provider.py  query.py  registry.py  resolver.py  schema.py  sqsexec.py  structure.py  tags.py  testing.py  utils.py  version.py
cloud-custodian/c7n/actions/: __init__.py  autotag.py  core.py  invoke.py  metric.py  network.py  notify.py  policy.py  webhook.py
cloud-custodian/c7n/filters/: __init__.py  config.py  core.py  health.py  iamaccess.py  iamanalyzer.py  kms.py  metrics.py  missing.py  multiattr.py  offhours.py  related.py  revisions.py  vpc.py
cloud-custodian/c7n/reports/: __init__.py  csvout.py
cloud-custodian/c7n/resources/: __init__.py  account.py  acm.py  ami.py  apigw.py  appelb.py  artifact.py  asg.py  aws.py  awslambda.py  backup.py  batch.py  cfn.py  cloudfront.py  cloudsearch.py  cloudtrail.py  code.py  cognito.py  config.py  cw.py  datapipeline.py  directconnect.py  directory.py  dlm.py  dms.py  dynamodb.py  ebs.py  ec2.py  ecr.py  ecs.py  efs.py  eks.py  elasticache.py  elasticbeanstalk.py  elasticsearch.py  elb.py  emr.py  fsx.py  gamelift.py  glacier.py  (+37 more)
cloud-custodian/c7n/ufuncs/: s3crypt.py
cloud-custodian/docker/: cli  cli-distroless  mailer  mailer-distroless  org  org-distroless  policystream  policystream-distroless
cloud-custodian/docs/: Makefile.sphinx
cloud-custodian/docs/logos/: icon-bw.ai  icon-color.ai  logo-bw.ai  logo-color-reversed.ai  logo-color.ai
cloud-custodian/docs/source/: actions.rst  conf.py  contribute.rst  deployment.rst  filters.rst  index.rst
cloud-custodian/docs/source/_static/: custodian-quickstart-policy.json
cloud-custodian/docs/source/aws/: gettingstarted.rst  lambda.rst  usage.rst
cloud-custodian/docs/source/azure/: gettingstarted.rst
cloud-custodian/docs/source/developer/: documentation.rst  index.rst  installing.rst  packaging.rst  tests.rst
cloud-custodian/docs/source/gcp/: contribute.rst  gettingstarted.rst
cloud-custodian/docs/source/quickstart/: advanced.rst  index.rst  policyStructure.rst
cloud-custodian/docs/source/tools/: empty
cloud-custodian/tests/: common.py  conftest.py  constants.py  test_account.py  test_acm.py  test_actions.py  test_ami.py  test_apigw.py  test_appelb.py  test_asg.py  test_autotag.py  test_aws.py  test_backup.py  test_batch.py  test_cache.py  test_cfn.py  test_cli.py  test_cloudfront.py  test_cloudsearch.py  test_cloudtrail.py  test_code.py  test_cognito.py  test_config.py  test_credentials.py  test_cwa.py  test_cwe.py  test_cwi.py  test_cwl.py  test_data.py  test_datapipeline.py  test_directory.py  test_dlm.py  test_dms.py  test_doc_examples.py  test_docker.py  test_dynamodb.py  test_ebs.py  test_ec2.py  test_ecr.py  test_ecs.py  (+69 more)
cloud-custodian/tests/data/: cfn-types.json  ec2-instance.json  ec2-instances.json  helloworld.py  iam-actions.json  kafka.json  report.json  sample-clouddir-schema.json  vars-test.yml
cloud-custodian/tests/data/config/: app-elb-config-event.json  app-elb.json  pipeline.json  poll-evaluation.json  rds-from-rule.json  s3-from-rule.json  s3-lifecycle-and-predicate.json  s3-lifecycle-null-predicate.json  s3-lifecycle.json  s3-rep-and-notify.json  s3-website-redirect.json  s3-website.json  s3.json
cloud-custodian/tests/data/cwe/: ec2-duty-event.json  event-asg-instance-failed.json  event-cloud-trail-catalog-put-resource-policy.json  event-cloud-trail-catalog-set-encryption.json  event-cloud-trail-s3.json  (+18 more)
cloud-custodian/tools/c7n_azure/: MANIFEST.in  pyproject.toml  readme.md  requirements.txt  setup.py  setup.py.tmpl
cloud-custodian/tools/c7n_gcp/: .gitignore  pyproject.toml  readme.md  requirements.txt  setup.py
cloud-custodian/tools/c7n_guardian/: example.yml  readme.md  setup.py  todo.md
cloud-custodian/tools/c7n_kube/: pyproject.toml  readme.md  requirements.txt  setup.py
cloud-custodian/tools/c7n_logexporter/: Makefile  README.md  cfn.yml  config.yml  pyproject.toml  setup.py
cloud-custodian/tools/c7n_mailer/: Dockerfile  README-docker.md  README.md  example.yml  pyproject.toml  requirements.txt  setup.py
cloud-custodian/tools/c7n_org/: Dockerfile  README.md  pyproject.toml  setup.py
cloud-custodian/tools/c7n_policystream/: Dockerfile  README.md  policystream.py  pyproject.toml  requirements.txt  setup.py
cloud-custodian/tools/c7n_salactus/: README.md  config.yml  requirements.txt  setup.py  supervisord.conf
cloud-custodian/tools/c7n_sentry/: README.md  setup.py  test_sentry.py
cloud-custodian/tools/c7n_sphinxext/: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  tests.py
cloud-custodian/tools/c7n_trailcreator/: pyproject.toml  readme.md  setup.py
cloud-custodian/tools/c7n_traildb/: README.md  setup.py
cloud-custodian/tools/cask/: .gitignore  Makefile  go.mod  go.sum  main.go  main_test.go  readme.md
cloud-custodian/tools/dev/: cfntypedb.py  changelog.py  citoxenv.py  dockerpkg.py  gcpiamdb.py  gcpstripagg.py  iamdb.py  license-headers.py  pinnedpip.py  poetrypkg.py  requirements.txt
cloud-custodian/tools/omnissm/: .gitignore  Makefile  README.md  go.mod  go.sum
cloud-custodian/tools/ops/: README.md  logsetup.py  mugc.py  org-pr-monitor.py  policylambda.py  policyrename.py  test_policylambda.py
cloud-custodian/tools/sandbox/: readme.md
cloud-custodian/tools/utils/: README.md  s3stat.py  update_headers.py
(+6705 files in other folders)
