[tool.poetry]
name = "c7n"
version = "0.9.8"
description = "Cloud Custodian - Policy Rules Engine"
authors = ["Cloud Custodian Project"]
readme = "README.md"
homepage = "https://cloudcustodian.io"
documentation = "https://cloudcustodian.io/docs"
repository = "https://github.com/cloud-custodian/cloud-custodian"
license = "Apache-2.0"
packages = [
    { include = "c7n" }]
classifiers=[
   "Topic :: System :: Systems Administration",
   "Topic :: System :: Distributed Computing"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/cloud-custodian/cloud-custodian/issues"

[tool.poetry.scripts]
custodian = 'c7n.cli:main'

[tool.poetry.dependencies]
python = "^3.6"
boto3 = "^1.12.31"
jsonschema = "^3.2.0"
argcomplete = "^1.11.1"
python-dateutil = "^2.8.1"
pyyaml = "^5.3"
tabulate = "^0.8.6"
importlib-metadata = "<2.0.0;python_version<3.8"
jsonpickle = "1.3"

[tool.poetry.dev-dependencies]
pytest = "~6.0.0"
coverage = "^5.0.3"
placebo = "^0.9.0"
pytest-xdist = "^1.31.0"
pytest-cov = "^2.8.1"
pytest-terraform = "^0.5.0"
mock = "^4.0.1"
vcrpy = "^4.0.2"
aws-xray-sdk = "^2.5.0"
flake8 = "^3.7.9"
tox = "^3.14.5"
jsonpatch = "^1.25"
psutil = "^5.7.0"
# wheel = "==0.30.0"
twine = "^3.1.1"
pytest-sugar = "^0.9.2"
click = "^7.1.2"

[tool.black]
skip-string-normalization = true
