[tool.poetry]
name = "c7n_azure"
version = "0.7.7"
description = "Cloud Custodian - Azure Support"
readme = "readme.md"
homepage="https://cloudcustodian.io"
repository="https://github.com/cloud-custodian/cloud-custodian"
documentation="https://cloudcustodian.io/docs/"
authors = ["Cloud Custodian Project"]
license = "Apache-2.0"
classifiers=[
   "Topic :: System :: Systems Administration",
   "Topic :: System :: Distributed Computing"
]

[tool.poetry.dependencies]
python = "^3.6"

azure-mgmt-authorization = "^0.60.0"
azure-mgmt-apimanagement = "^0.1.0"
azure-mgmt-applicationinsights = "^0.2.0"
azure-mgmt-batch = "^7.0.0"
azure-mgmt-cognitiveservices = "^5.0.0"
azure-mgmt-cosmosdb = "^0.11.0"
azure-mgmt-costmanagement = "^0.1.0"
azure-mgmt-containerinstance = "^1.5.0"
azure-mgmt-compute = "^10.0.0"
azure-mgmt-cdn = "^4.0.0"
azure-mgmt-containerregistry = "^2.8.0"
azure-mgmt-containerservice = "^8.2.0"
azure-mgmt-databricks = "^0.1.0"
azure-mgmt-datalake-store = "^0.5.0"
azure-mgmt-datafactory = "^0.8.0"
azure-mgmt-dns = "^3.0.0"
azure-mgmt-eventgrid = "^2.2.0"
azure-mgmt-eventhub = "^3.0.0"
azure-mgmt-hdinsight = "^1.4.0"
azure-mgmt-iothub = "^0.10.0"
azure-mgmt-keyvault = "1.1.0"
azure-mgmt-managementgroups = "^0.2.0"
azure-mgmt-network = "^9.0.0"
azure-mgmt-resourcegraph = "^2.0.0"
azure-mgmt-resource = "~6"
azure-mgmt-rdbms = "^1.9.0"
azure-mgmt-search = "^2.1.0"
azure-mgmt-sql = "^0.16.0"
azure-mgmt-storage = "^7.1.0"
azure-mgmt-subscription = "^0.5.0"
azure-mgmt-web = "^0.44.0"
azure-mgmt-logic = "^3.0.0"
azure-keyvault = "1.1.0"
azure-storage-blob = "~2.1"
azure-storage-queue = "~2.1"
azure-cosmosdb-table = "^1.0.6"
applicationinsights = "^0.11.9"
apscheduler = "^3.6.3"
distlib = "^0.3.0"
jsonpickle = "1.3"
requests = "^2.22.0"
PyJWT = "^1.7.1"
azure-cli-core = "^2.0.81"
adal = "^1.2.2"


azure-functions = { version = "^1.0.8", python = "~3" }
azure-graphrbac = "^0.61.1"
netaddr = "^0.7.19"
azure-storage-file = "^2.1.0"
azure-mgmt-policyinsights = "^0.4.0"
azure-mgmt-monitor = "^0.7.0"
click = "^7.0"
azure-cosmos = "^3.1.2"
azure-mgmt-redis = "^6.0.0"

[tool.poetry.dev-dependencies]
# setup custodian as a dev dependency
c7n = {path = "../..", develop = true}
vcrpy-unittest = "^0.1.7"
parameterized = "^0.7.1"

[build-system]
requires = ["poetry>=0.12", "setuptools"]
build-backend = "poetry.masonry.api"
