[tool.poetry]
name = "c7n_mailer"
version = "0.6.7"
description = "Cloud Custodian - Reference Mailer"
authors = ["Cloud Custodian Project"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://cloudcustodian.io"
repository = "https://github.com/cloud-custodian/cloud-custodian"
documentation = "https://cloudcustodian.io/docs/"
classifiers = [
   "Topic :: System :: Systems Administration",
   "Topic :: System :: Distributed Computing"
]

[tool.poetry.scripts]
c7n-mailer = 'c7n_mailer.cli:main'
c7n-mailer-replay = 'c7n_mailer.replay:main'

[tool.poetry.dependencies]
python = "^3.6"
Jinja2 = "^2.11"
boto3 = "^1.11.12"
jsonschema = "^3.2.0"
python-dateutil = "^2.8.1"
pyyaml="^5.3"
sendgrid = "^6.1.1"
datadog = "^0.34.0"
ldap3 = "^2.6.1"
redis = "^3.4.1"
jsonpointer = "^2.0"
jsonpatch = "^1.25"

[tool.poetry.dev-dependencies]
fakeredis = "^1.2.0"
pytest = "~6.0.0"

[build-system]
requires = ["poetry>=0.12", "setuptools"]
build-backend = "poetry.masonry.api"
