[tool.poetry]
name = "c7n_org"
version = "0.6.7"
description = "Cloud Custodian - Parallel Execution"
readme = "README.md"
homepage = "https://cloudcustodian.io"
documentation = "https://cloudcustodian.io/docs/tools/c7n-org.html"
repository = "https://github.com/cloud-custodian/cloud-custodian"
authors = ["Cloud Custodian Project"]
license = "Apache-2.0"
classifiers=[
   "Topic :: System :: Systems Administration",
   "Topic :: System :: Distributed Computing"
]

[tool.poetry.scripts]
c7n-org = 'c7n_org.cli:cli'

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.0"

[tool.poetry.dev-dependencies]
c7n = {path = "../..", develop = true}
pytest = "~6.0.0"

[build-system]
requires = ["poetry>=0.12", "setuptools"]
build-backend = "poetry.masonry.api"
