[tool.poetry]
name = "c7n_policystream"
version = "0.4.7"
description = "Cloud Custodian - Git Commits as Logical Policy Changes"
readme = "README.md"
homepage = "https://cloudcustodian.io"
repository = "https://github.com/cloud-custodian/cloud-custodian"
documentation = "https://cloudcustodian.io/docs/"
authors = ["Cloud Custodian Project"]
license = "Apache-2.0"
classifiers = [
   "Topic :: System :: Systems Administration",
   "Topic :: System :: Distributed Computing"
]
packages = [{"include" = "policystream.py"}]

[tool.poetry.scripts]
c7n-policystream = 'policystream:cli'

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.0"
requests = "^2.22.0"
pyyaml = "^5.3"
pygit2 = "~1.0"
boto3 = "^1.12.0"

[tool.poetry.dev-dependencies]
pytest = "~6.0.0"
c7n = {path = "../..", develop = true}
mock = "^4.0.2"

[build-system]
requires = ["poetry>=0.12", "setuptools"]
build-backend = "poetry.masonry.api"
