[tool.poetry]
name = "c7n_sphinxext"
version = "1.1.7"
description = "Cloud Custodian - Sphinx Extensions"
authors = ["Cloud Custodian Project"]
license = "Apache-2.0"
homepage = "https://cloudcustodian.io"
documentation = "https://cloudcustodian.io/docs"
repository = "https://github.com/cloud-custodian/cloud-custodian"
classifiers=[
   "Topic :: System :: Systems Administration",
   "Topic :: System :: Distributed Computing"
]
readme = "README.md"

[tool.poetry.scripts]
c7n-sphinxext = 'c7n_sphinxext.docgen:main'

[tool.poetry.dependencies]
python = "^3.6"
Sphinx = "~3.0"
Pygments = "^2.6.1"
sphinx_rtd_theme = "^0.4.3"
recommonmark = "^0.6.0"
sphinx_markdown_tables = "^0.0.12"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
c7n = {path = "../..", develop = true}

[build-system]
requires = ["poetry>=0.12", "setuptools"]
build-backend = "poetry.masonry.api"
