[tool.poetry]
name = "c7n_trailcreator"
version = "0.2.7"
readme = "readme.md"
homepage = "https://cloudcustodian.io"
repository = "https://github.com/cloud-custodian/cloud-custodian"
description = "Cloud Custodian - Retroactive Tag Resource Creators from CloudTrail"
documentation = "https://cloudcustodian.io/docs/tools/c7n-trailcreator.html"
authors = ["Cloud Custodian Project"]
license = "Apache-2.0"

classifiers=[
   "Topic :: System :: Systems Administration",
   "Topic :: System :: Distributed Computing"
]

[tool.poetry.scripts]
c7n-trailcreator = 'c7n_trailcreator.trailcreator:cli'

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.0"

[tool.poetry.dev-dependencies]
c7n_org = {path = "../c7n_org", develop = true}
c7n = {path = "../..", develop = true}

[build-system]
requires = ["poetry>=0.12", "setuptools"]
build-backend = "poetry.masonry.api"
